@@ -2,7 +2,7 @@
  * **************************************************-
  * ingrid-interface-search
  * ==================================================
- * Copyright (C) 2014 - 2025 wemove digital solutions GmbH
+ * Copyright (C) 2014 - 2026 wemove digital solutions GmbH
  * ==================================================
  * Licensed under the EUPL, Version 1.2 or – as soon they will be
  * approved by the European Commission - subsequent versions of the
@@ -24,13 +24,14 @@ package de.ingrid.iface_test.util;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import java.io.InputStream;
 import java.io.StringReader;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 
-import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Test;
 import org.w3c.dom.Document;
 import org.xml.sax.InputSource;
@@ -42,7 +43,10 @@ public class IdfUtilsTest {
     @Test
     public void testEnclosingBoundingBoxAsPolygon() throws Exception {
 
-        String data = IOUtils.toString(this.getClass().getClassLoader().getResourceAsStream("data/idf_dataset_2.xml"));
+        String data;
+        try (InputStream inputStream = this.getClass().getClassLoader().getResourceAsStream("data/idf_dataset_2.xml")) {
+            data = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+        }
         List<Double> results = IdfUtils.getEnclosingBoundingBoxAsPolygon(stringToDocument(data));
         assertEquals(50.323895, results.get(0));
         assertEquals(5.8665085, results.get(1));
